@@ -1,9 +1,9 @@
-[manpage_begin uevent n 0.1]
+[manpage_begin uevent n 0.1.1]
 [copyright {2007 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {User events}]
 [titledesc {User events}]
 [require Tcl 8.4]
-[require uevent [opt 0.1]]
+[require uevent [opt 0.1.1]]
 [require logger]
 [keywords event bind unbind {generate event}]
 [description]
